Implement JWT authentication and authorization 🚫